Fix findbugs optimization.
new Integer() replaced by Intger.valueOf()
new Boolean() replaced by Boolean.valueOf()